finish flask framework videos and quizes

--- a/vagrant/webapp/sites/restaurants.html
+++ b/vagrant/webapp/sites/restaurants.html
@@ -5,6 +5,7 @@
     <title>Restaurants!</title>
 </head>
 <body>
+<h2><a href="/restaurants/new">Create New Resturant</a></h2>
     <ul id="rests">
         {restaurants_list}
     </ul>
